tests/fixtures/invalid/int_rshift_none.py
# Cannot right shift Int and None
x: int = 1 >> None
